--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,10 @@
     padding: 0;
 }
 
-a { 
-    color:rgb(116, 116, 116);    
-}
-
-a:hover{
-    text-shadow: 5px 5px 10px rgb(0, 255, 34);
-}
-
 /*settings for whole site*/
-body{
-    
+body {
     width: 100%;
-    max-width: 1800px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     font-family: poppins;
@@ -26,21 +17,31 @@ body{
     overflow-x: hidden;
 }
 
-#top{
+#top {
     position: sticky;
-    background-color: rgb(199, 255, 197);
+    background: rgb(172,135,47);
+    background: linear-gradient(90deg, rgb(184, 158, 99) 0%, rgba(224,196,113,1) 35%, rgba(199,173,75,1) 100%);
     width: 100%;
     height: 100%;
-    max-width: 1800px;
+    max-width: 1200px;
     z-index: 1;
 }
-/* welcome-animation */
 
-#welcome-animation-container{
+a {
+    color: rgb(0, 0, 0);
+}
+
+a:hover {
+    transform: scale(1.1);
+    text-shadow: 10px 10px 10px green;
+}
+
+/* welcome-animation */
+#welcome-animation-container {
     z-index: 500000;
     position: fixed;
     top: 0;
-    left:0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -50,7 +51,8 @@ body{
     animation-duration: 3.8s;
     animation-fill-mode: forwards;
 }
-#welcome-animation-upper-left{
+
+#welcome-animation-upper-left {
     position: absolute;
     top: 0;
     left: 0;
@@ -64,21 +66,21 @@ body{
     animation-fill-mode: forwards;
 }
 
-#upper-left-welcome-slide{
+#upper-left-welcome-slide {
     position: absolute;
     height: 100px;
     bottom: 0;
     right: 0;
 }
 
-#welcome-animation-upper-left h1{
-    position:absolute;
+#welcome-animation-upper-left h1 {
+    position: absolute;
     bottom: 8rem;
     right: 0;
     font-size: 2rem;
 }
 
-#welcome-animation-upper-right{
+#welcome-animation-upper-right {
     position: absolute;
     background-color: rgb(216, 216, 216);
     height: 50%;
@@ -92,29 +94,23 @@ body{
     animation-fill-mode: forwards;
 }
 
-#upper-right-welcome-slide{
+#upper-right-welcome-slide {
     position: absolute;
     height: 118px;
     bottom: 0;
     left: 0;
-
-
 }
 
-#welcome-animation-upper-right h1{
-    position:absolute;
+#welcome-animation-upper-right h1 {
+    position: absolute;
     left: 2rem;
     bottom: 8rem;
     font-size: 2rem;
-    
 }
 
-
-
-#welcome-animation-bottom-right{
+#welcome-animation-bottom-right {
     position: absolute;
     background-color: rgb(236, 236, 236);
-  
     height: 50%;
     width: 50%;
     font-size: 3vw;
@@ -125,27 +121,24 @@ body{
     animation-delay: 2.3s;
     animation-duration: 2s;
     animation-fill-mode: forwards;
-    }
+}
 
-    #bottom-right-welcome-slide{
-        position: absolute;
-        height: 100px;
-        top: 0;
-        left: 0;
-    }
+#bottom-right-welcome-slide {
+    position: absolute;
+    height: 100px;
+    top: 0;
+    left: 0;
+}
 
-    #welcome-animation-bottom-right h1{
-        position:absolute;
-        left: 20px;
-        top:8rem;
-        left: 2rem;
-        font-size: 2rem;
-        
-    }
-    
-     
+#welcome-animation-bottom-right h1 {
+    position: absolute;
+    left: 20px;
+    top: 8rem;
+    left: 2rem;
+    font-size: 2rem;
+}
 
-#welcome-animation-bottom-left{
+#welcome-animation-bottom-left {
     position: absolute;
     background-color: rgb(221, 221, 221);
     height: 50%;
@@ -153,59 +146,58 @@ body{
     bottom: 0;
     left: 0;
     z-index: 100;
-    font-size: 3vw;;
+    font-size: 3vw;
+    ;
     animation-name: welcome-slide-left;
     animation-delay: 2.7s;
     animation-duration: 2s;
     animation-fill-mode: forwards;
 }
 
-#bottom-left-welcome-slide{
+#bottom-left-welcome-slide {
     position: absolute;
     height: 100px;
     top: 0;
     right: 0;
 }
 
-#welcome-animation-bottom-left h1{
-    position:absolute;
+#welcome-animation-bottom-left h1 {
+    position: absolute;
     right: 2rem;
     top: 8rem;
-    font-size: 2rem; 
-
-    
+    font-size: 2rem;
 }
 
 /* header */
-#header{
-    position: sticky;
-    top:0;
+#header {
+    position: fixed;
+    top: 0;
     width: 100%;
-    height: auto;
-    min-height: 80px;
+    min-height: 5rem;
     text-transform: uppercase;
-    background-color: rgb(255, 255, 255);   
+    background-color: rgb(255, 255, 255);
     z-index: 99;
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 3fr;
+    max-width: 1200px;
 }
 
-#logo-big{
+#logo-big {
     color: black;
+    padding: 1rem auto 1rem 1rem;
     height: 70px;
     float: left;
     padding-left: 5px;
-    text-shadow: 0px 0px 4px rgb(205, 255, 217);
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
 }
 
-#logo-big p{
+#logo-big p {
     font-size: 1rem;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
 }
 
-#navigation-list{
-
+#navigation-list {
     background-color: rgba(255, 255, 255, 0.877);
-
     width: 100%;
     min-width: 100%;
     list-style: none;
@@ -214,59 +206,60 @@ body{
     text-shadow: 0px 0px 4px rgb(205, 255, 217);
 }
 
-.nav-item{
+.nav-item {
     float: right;
-    /* margin: 0  2rem; */
+    margin: 0 2rem;
     line-height: 70px;
 }
 
-#hamburger-container{
-    display:none;
+#hamburger-container {
+    display: none;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
 }
 
-
 /* presentation */
-
-#presentation-background{
+#presentation-background {
     background-image: url("../wood-plants.jpg");
     background-size: cover;
+    margin-top: 4rem;
     min-height: 15rem;
     padding: 8rem 3rem;
 }
 
-#presentation-container{
-    background-color: rgba(32, 175, 51, 0.637);
+#presentation-container {
+    background-color: rgba(32, 175, 51, 0.781);
     border-radius: 250px 0px 0px 0px;
+    margin-left: 8vw;
     max-width: 60rem;
     box-shadow: 10px 10px 20px black;
-    
-
 }
 
-#presentation-text{
+#presentation-text {
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
     font-size: 1rem;
     padding: 2rem;
 }
 
-#presentation-text h2{
+#presentation-text h2 {
     text-align: center;
-    color:rgb(0, 41, 2);
+    color: rgb(0, 41, 2);
 }
-#text-yellow-presentation{
+
+#text-yellow-presentation {
     color: gold;
     text-shadow: 4px 4px 10px black;
 }
 
-#text-red-presentation{
+#text-red-presentation {
     color: rgb(255, 0, 0);
     text-shadow: 4px 4px 10px black;
 }
 
-#plant-guy-image{
+#plant-guy-image {
     height: 26rem;
 }
 
-#owner-picture-container{
+#owner-picture-container {
     float: left;
     height: 15rem;
     width: 15rem;
@@ -274,9 +267,11 @@ body{
     overflow: hidden;
     box-shadow: 20px 5px 50px black;
     margin-right: 2rem;
+    margin-left: -4rem;
+    margin-top: -2rem;
 }
 
-#arrow-down{
+#arrow-down {
     color: rgb(101, 202, 88);
     text-align: right;
     position: relative;
@@ -285,115 +280,116 @@ body{
     animation-duration: 2s;
     animation-fill-mode: both;
     animation-iteration-count: infinite;
-    right :4rem;
+    right: 4rem;
     float: right;
     margin-top: rem;
     text-shadow: 4px 4px 10px black;
 }
 
 @keyframes arrow-movement {
-    0%{
+    0% {
         top: -4rem;
     }
 
-    50%{
+    50% {
         top: 0rem;
     }
-    100%{
+
+    100% {
         top: -4rem;
     }
-   
 }
-
 
 /* products */
-
-#products-grid-container{
-    margin: 5rem auto 5rem auto;
+#products-grid-container {
+    margin: 2rem auto 2rem auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-areas:  "a a a"
-                          "b c d"
-                          "e f g"
-                          "h i j";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "a a a"
+        "b c d"
+        "e f g"
+        "h i j";
     text-align: center;
     column-gap: 5rem;
-    width:80%;
+    width: 80%;
 }
 
-.product{
+.product {
     width: 100%;
-    box-shadow: 10px 10px 10px black;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.425);
 }
 
-#products-grid-container > .section-logo{
+#products-grid-container>.section-logo {
     margin-bottom: 2rem;
     font-size: 3rem;
     grid-area: a;
     text-align: center;
-  }
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+}
 
-#products-grid-container > #product-1{
+#products-grid-container>#product-1 {
+    line-height: 5rem;
+    font-size: 1.5rem;
     grid-area: b;
     text-align: center;
-  }
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+}
 
-
-
-  #products-grid-container > #product-2{
-    
+#products-grid-container>#product-2 {
+    line-height: 5rem;
+    font-size: 1.5rem;
     grid-area: c;
     text-align: center;
-  }
-  #products-grid-container > #product-3{
-    
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+}
+
+#products-grid-container>#product-3 {
+    line-height: 5rem;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    font-size: 1.5rem;
     grid-area: d;
     text-align: center;
-  }
+}
 
-  #products-grid-container > #product-1-info{
-    margin-top: 2rem;  
+#products-grid-container>#product-1-info {
+    margin-top: 2rem;
     grid-area: e;
 }
 
-#products-grid-container > #product-2-info{
-    grid-area: f;   
-    margin-top: 2rem;   
+#products-grid-container>#product-2-info {
+    grid-area: f;
+    margin-top: 2rem;
 }
 
-#products-grid-container > #product-3-info{
+#products-grid-container>#product-3-info {
     grid-area: g;
-    margin-top: 2rem;   
+    margin-top: 2rem;
 }
 
-#products-grid-container > #product-1-buy{
+#products-grid-container>#product-1-buy {
     grid-area: h;
     font-size: 2rem;
 }
 
-#products-grid-container > #product-2-buy{
+#products-grid-container>#product-2-buy {
     grid-area: i;
     font-size: 2rem;
-    
 }
 
-#products-grid-container > #product-3-buy{
+#products-grid-container>#product-3-buy {
     grid-area: j;
     font-size: 2rem;
-    
 }
 
 #fun-quote-text {
-    margin-top: 5rem;
     text-align: center;
-    animation-name: slide-in;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    margin-bottom: 0rem;
-} 
-/* About */
+    padding: 4rem 0;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+}
 
-#about{
+/* About */
+#about {
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
     padding-top: 3rem;
     width: 60%;
     margin: 0 auto;
@@ -402,256 +398,298 @@ body{
 }
 
 /* purchase form */
-
-#purchase-form{
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 3rem;
+#main-fieldset {
+    background-color: blanchedalmond;
+    padding: 2rem 2rem;
+    font-size: 2rem;
+    max-width: 40%;
+    min-width: 300px;
+    margin: 0 auto 5rem auto;
+    border-radius: 10px;
+    border: dotted;
 }
 
-#your-info, #purchase-info{
-    padding: 2rem;
+#main-fieldset legend {
+    background-color: blanchedalmond;
+    border: 1px solid black;
+    border-radius: 10px;
+    transform: scale(1.5);
+    padding: 0 1rem;
+    margin-left: 3rem;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
 
+#main-fieldset fieldset {
+    font-size: 1rem;
+    padding: 1rem;
+    min-width: 240px;
+    border-radius: 10px;
+    border: dotted;
+}
 
+#submit {
+    padding: 1rem;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    font-size: 2rem;
+    /* border:4px solid white; */
+    background-color: rgb(120, 223, 106);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    border-radius: 10px;
+    text-align: center;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+}
+
+#submit:hover {
+    transform: scale(1.2);
+    box-shadow: 0px 0px 30px 20px rgb(51, 230, 75);
+}
 
 /* footer */
-
-#footer-grid-container{
+#footer-grid-container {
     width: 100%;
     overflow: hidden;
     background-color: rgb(231, 231, 231);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-areas:  "a a a a"
-                          "b b c c"
-                          "d d d d";
+    grid-template-areas: "a a a a"
+        "b b c c"
+        "d d d d";
     text-align: center;
     column-gap: 5rem;
-  }
-  
-  #footer-grid-container > .section-logo{
-      font-size: 2rem;
+}
+
+#footer-grid-container>.section-logo {
+    font-size: 2rem;
     grid-area: a;
     text-align: center;
-  }
-  
-  #footer-grid-container > #section-opening-hours{
+}
+
+#footer-grid-container>#section-opening-hours {
     text-align: center;
     grid-area: b;
-  }
-  
-  #footer-grid-container > #section-contact{
-  text-align: center;
+}
+
+#footer-grid-container>#section-contact {
+    text-align: center;
     grid-area: c;
-  }
-  
-  #footer-grid-container > #section-social{
+}
+
+#footer-grid-container>#section-social {
     grid-area: d;
-  }
+}
 
-  #section-social{
-      word-spacing: auto;
-      color: rgb(255, 255, 0);
-      padding-bottom: 1rem;
-      font-size: 2rem;
-  }
+#section-social {
+    word-spacing: 1rem;
+    padding-bottom: 1rem;
+    font-size: 2rem;
+}
 
-
+#section-social p {
+    font-size: 2rem;
+    word-spacing: normal;
+}
 
 /* psuedo */
-
 /*animation */
-
 @keyframes slide-in {
-    from{
+    from {
         margin-left: -100%;
     }
-    to{
+
+    to {
         margin-left: 0;
     }
-    
 }
 
-#product-1-buy:hover, #product-2-buy:hover, #product-3-buy:hover{
+#product-1-buy:hover,
+#product-2-buy:hover,
+#product-3-buy:hover {
     transform: scale(1.5)
 }
-/* welcome animation */
 
- @keyframes welcome-slide-up {
-    from{
+/* welcome animation */
+@keyframes welcome-slide-up {
+    from {
         top: 0;
     }
-    to{
+
+    to {
         top: -100%;
         visibility: hidden;
     }
-    
 }
 
 @keyframes welcome-slide-right {
-    from{
+    from {
         right: 0;
     }
-    to{
+
+    to {
         right: -100%;
         visibility: hidden;
     }
-    
 }
 
 @keyframes welcome-slide-bottom {
-    0%{
+    0% {
         bottom: 0;
     }
-    30%{visibility: hidden;
 
+    30% {
+        visibility: hidden;
     }
-    100%{
+
+    100% {
         bottom: -100%;
         visibility: hidden;
     }
-    
 }
 
 @keyframes welcome-slide-left {
-    from{
+    from {
         left: 0;
     }
-    to{
+
+    to {
         left: -100%;
         visibility: hidden;
     }
-} 
+}
 
-@keyframes welcome-make-inactive{
-    from{
+@keyframes welcome-make-inactive {
+    from {
         visibility: visible;
     }
-    to{
+
+    to {
         visibility: hidden;
     }
 }
 
 @media screen and (max-width: 1000px) {
-
-    #navigation-list{
+    #navigation-list {
         font-size: 1rem;
-        
     }
-    .nav-item{
+
+    .nav-item {
         margin: 0 0.5rem;
     }
-    #products-grid-container{
+
+    #products-grid-container {
         margin: 5rem auto 5rem auto;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-areas:  "a"
-                                "b"
-                                "e"
-                                "h"
-                                "c"
-                                "f"
-                                "i"
-                                "d"
-                                "g"
-                                "j";
+        grid-template-areas: "a"
+            "b"
+            "e"
+            "h"
+            "c"
+            "f"
+            "i"
+            "d"
+            "g"
+            "j";
     }
 
-    #products-grid-container > #product-1-info{
-
-    margin-bottom : 2rem;
-    grid-area: e;
+    #products-grid-container>#product-1-info {
+        margin-bottom: 2rem;
+        grid-area: e;
     }
 
-    #products-grid-container > #product-2-info{
-    grid-area: f;   
-    margin-bottom : 2rem;
+    #products-grid-container>#product-2-info {
+        grid-area: f;
+        margin-bottom: 2rem;
     }
 
-    #products-grid-container > #product-3-info{
-    grid-area: g;
-    margin-bottom : 2rem;
-    }                        
+    #products-grid-container>#product-3-info {
+        grid-area: g;
+        margin-bottom: 2rem;
+    }
 
-    #about{
+    #about {
         padding-top: 2rem;
         width: 90%;
         margin-bottom: 2rem;
     }
 }
-    
 
-@media screen and (max-width: 650px){
-   
-    #navigation-list{
+@media screen and (max-width: 650px) {
+    #navigation-list {
         display: none;
     }
 
-    #hamburger-container{
+    #hamburger-container {
         width: 100%;
-        position:absolute;
-        top:1rem;
-        display:grid;
-        grid-template-columns:1fr 1fr 1fr;
+        position: absolute;
+        top: 1rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: "a a a"
-                             "b c d";
+            "b c d";
     }
-    
-    #hamburger{
-        color:rgb(3, 92, 7);
-        padding-right:1rem;
+
+    #hamburger {
+        color: rgb(3, 92, 7);
+        padding-right: 1rem;
         text-align: right;
         grid-area: a;
         border: none;
         background-color: rgba(240, 248, 255, 0);
         font-size: 3rem;
-        
     }
 
-    #hamburger-container a{
+    #hamburger-container a {
         width: 100%;
         font-size: 1.5rem;
         line-height: 3rem;
         background-color: rgb(255, 255, 255);
         display: none;
-        text-align: center;
+        text-align: left;
     }
 
-    #hamburger-container:hover a{
-        display:block;
-        
+    #hamburger-container:hover a {
+        display: block;
     }
 
-    #presentation-background{
+    #presentation-background {
         padding: 1rem;
-        
     }
 
-    #footer-grid-container{
+    #footer-grid-container {
         background-color: rgb(231, 231, 231);
         grid-template-columns: 1fr;
-        grid-template-areas:  "a"
-                              "b"
-                              "c"
-                              "d";
-      }
-      #section-social{
-          display: inline-block;
+        grid-template-areas: "a"
+            "b"
+            "c"
+            "d";
+    }
+
+    #section-social {
+        display: inline-block;
         word-spacing: 2rem;
         padding-bottom: 1rem;
         font-size: 5rem;
         width: 100%;
     }
 
-    #owner-picture-container{
-
-    height: 8rem;
-    width: 8rem;
+    #owner-picture-container {
+        height: 8rem;
+        width: 8rem;
     }
 
-    #plant-guy-image{
+    #plant-guy-image {
         height: 15rem;
     }
-      
+
+    #products-grid-container>#product-1-buy {
+        margin: -2rem auto 2rem auto;
+    }
+
+    #products-grid-container>#product-2-buy {
+        margin: -2rem auto 2rem auto;
+    }
+
+    #products-grid-container>#product-3-buy {
+        margin: -2rem auto 2rem auto;
+    }
 }
