--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,8 @@ body {
 
 #top {
     position: sticky;
-    background: rgb(172,135,47);
-    background: linear-gradient(90deg, rgb(184, 158, 99) 0%, rgba(224,196,113,1) 35%, rgba(199,173,75,1) 100%);
+    background: rgb(245,245,245);
+    background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(215,215,215,1) 46%, rgba(240,240,240,1) 100%);
     width: 100%;
     height: 100%;
     max-width: 1200px;
@@ -56,7 +56,7 @@ a:hover {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(146, 197, 150);
     height: 50%;
     width: 50%;
     z-index: 100;
@@ -76,13 +76,13 @@ a:hover {
 #welcome-animation-upper-left h1 {
     position: absolute;
     bottom: 8rem;
-    right: 0;
+    right: 2rem;
     font-size: 2rem;
 }
 
 #welcome-animation-upper-right {
     position: absolute;
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(111, 155, 94);
     height: 50%;
     width: 50%;
     top: 0;
@@ -110,7 +110,7 @@ a:hover {
 
 #welcome-animation-bottom-right {
     position: absolute;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(104, 182, 94);
     height: 50%;
     width: 50%;
     font-size: 3vw;
@@ -140,7 +140,7 @@ a:hover {
 
 #welcome-animation-bottom-left {
     position: absolute;
-    background-color: rgb(221, 221, 221);
+    background-color: rgb(99, 143, 103);
     height: 50%;
     width: 50%;
     bottom: 0;
@@ -222,8 +222,10 @@ a:hover {
     background-image: url("../wood-plants.jpg");
     background-size: cover;
     margin-top: 4rem;
-    min-height: 15rem;
-    padding: 8rem 3rem;
+    min-height: 1rem;
+    padding: 4rem 3rem;
+    box-shadow: inset 0 0 30px 30px rgb(255, 255, 255);
+    
 }
 
 #presentation-container {
@@ -232,6 +234,7 @@ a:hover {
     margin-left: 8vw;
     max-width: 60rem;
     box-shadow: 10px 10px 20px black;
+    
 }
 
 #presentation-text {
@@ -275,14 +278,13 @@ a:hover {
     color: rgb(101, 202, 88);
     text-align: right;
     position: relative;
-    font-size: 7rem;
+    font-size: 5rem;
     animation-name: arrow-movement;
     animation-duration: 2s;
     animation-fill-mode: both;
     animation-iteration-count: infinite;
     right: 4rem;
     float: right;
-    margin-top: rem;
     text-shadow: 4px 4px 10px black;
 }
 
@@ -302,7 +304,6 @@ a:hover {
 
 /* products */
 #products-grid-container {
-    margin: 2rem auto 2rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "a a a"
@@ -312,27 +313,33 @@ a:hover {
     text-align: center;
     column-gap: 5rem;
     width: 80%;
+    margin: 2rem 10% 2rem 10%;
 }
 
 .product {
     width: 100%;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.425);
+    /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.425); */
+    box-shadow: inset 0 0 30px 30px rgb(255, 255, 255);
 }
 
-#products-grid-container>.section-logo {
-    margin-bottom: 2rem;
-    font-size: 3rem;
+#products-grid-container > .section-logo {
+    font-size: 2rem;
     grid-area: a;
     text-align: center;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
 
 #products-grid-container>#product-1 {
+    background-image: url("../images/watering-ball.gif");
+    background-size: contain;
+    background-repeat: no-repeat;
     line-height: 5rem;
     font-size: 1.5rem;
     grid-area: b;
     text-align: center;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    -webkit-mask-image: url('data:image/svg+xml;utf8,<svg preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 100 100" xml:space="preserve"><style type="text/css">.blur{filter:url(%23softedge);}</style><filter id="softedge"><feGaussianBlur stdDeviation="3.5"></feGaussianBlur></filter><g class="blur"><rect x="10" y="10" width="80" height="80"/></g></svg>'); 
+	-webkit-mask-size: cover; 
 }
 
 #products-grid-container>#product-2 {
@@ -352,18 +359,15 @@ a:hover {
 }
 
 #products-grid-container>#product-1-info {
-    margin-top: 2rem;
     grid-area: e;
 }
 
 #products-grid-container>#product-2-info {
     grid-area: f;
-    margin-top: 2rem;
 }
 
 #products-grid-container>#product-3-info {
     grid-area: g;
-    margin-top: 2rem;
 }
 
 #products-grid-container>#product-1-buy {
@@ -399,9 +403,9 @@ a:hover {
 
 /* purchase form */
 #main-fieldset {
-    background-color: blanchedalmond;
+    background-color: rgb(206, 206, 206);
     padding: 2rem 2rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     max-width: 40%;
     min-width: 300px;
     margin: 0 auto 5rem auto;
@@ -410,11 +414,11 @@ a:hover {
 }
 
 #main-fieldset legend {
-    background-color: blanchedalmond;
+    background-color: rgb(204, 203, 200);
     border: 1px solid black;
     border-radius: 10px;
-    transform: scale(1.5);
-    padding: 0 1rem;
+    transform: scale(1.0);
+    padding: 0 0.5rem;
     margin-left: 3rem;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
@@ -441,7 +445,11 @@ a:hover {
 
 #submit:hover {
     transform: scale(1.2);
-    box-shadow: 0px 0px 30px 20px rgb(51, 230, 75);
+    box-shadow: 0px 0px 30px 20px rgba(51, 230, 75, 0.568);
+}
+
+input:focus{
+    background-color: rgba(135, 216, 139, 0.664);
 }
 
 /* footer */
@@ -645,6 +653,7 @@ a:hover {
         background-color: rgb(255, 255, 255);
         display: none;
         text-align: left;
+        padding: 0 1rem;
     }
 
     #hamburger-container:hover a {
@@ -659,9 +668,9 @@ a:hover {
         background-color: rgb(231, 231, 231);
         grid-template-columns: 1fr;
         grid-template-areas: "a"
-            "b"
-            "c"
-            "d";
+                             "b"
+                             "c"
+                             "d";
     }
 
     #section-social {
@@ -672,13 +681,22 @@ a:hover {
         width: 100%;
     }
 
+    #presentation-container {
+        margin-top: 1rem;
+    }
+
     #owner-picture-container {
+        margin-top: 1rem;
         height: 8rem;
         width: 8rem;
     }
 
     #plant-guy-image {
         height: 15rem;
+    }
+
+    #products-grid-container > .section-logo {
+        margin-top: -5rem;
     }
 
     #products-grid-container>#product-1-buy {
